--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Build iOS
+name: Build
 
 on:
   push:
@@ -23,3 +23,4 @@ jobs:
     - run: flutter pub get
     - run: flutter test
     - run: flutter build ios --release --no-codesign
+    - run: flutter build apk --release
